--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,7 @@ Stock Photos
 }
 .form-input {
   width: 100%;
+  outline: none;
 }
 .form-input,
 .submit-btn {
@@ -226,6 +227,7 @@ Stock Photos
 }
 
 .loading {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   padding: 3rem;
 }
